error.txt
   Compiling ruthe v0.1.0 (/Users/kisaczka/Desktop/code/ruthe)
error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> src/lib.rs:258:38
    |
256 |             match self.get(list) {
    |                   ---- immutable borrow occurs here
257 |                 Some(Value::Cons(car, cdr)) => {
258 |                     let new_result = self.cons(*car, result);
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
...
261 |                     list = *cdr;
    |                            ---- immutable borrow later used here

error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> src/lib.rs:259:21
    |
256 |             match self.get(list) {
    |                   ---- immutable borrow occurs here
...
259 |                     self.decref(result);
    |                     ^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
260 |                     result = new_result;
261 |                     list = *cdr;
    |                            ---- immutable borrow later used here

error[E0499]: cannot borrow `*arena` as mutable more than once at a time
   --> src/lib.rs:308:26
    |
308 |     let env = arena.cons(arena.nil(), arena.nil());
    |               ----- ---- ^^^^^ second mutable borrow occurs here
    |               |     |
    |               |     first borrow later used by call
    |               first mutable borrow occurs here
    |
help: try adding a local storing this argument...
   --> src/lib.rs:308:26
    |
308 |     let env = arena.cons(arena.nil(), arena.nil());
    |                          ^^^^^^^^^^^
help: ...and then using that local as the argument to this call
   --> src/lib.rs:308:15
    |
308 |     let env = arena.cons(arena.nil(), arena.nil());
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0499]: cannot borrow `*arena` as mutable more than once at a time
   --> src/lib.rs:308:39
    |
308 |     let env = arena.cons(arena.nil(), arena.nil());
    |               ----- ----              ^^^^^ second mutable borrow occurs here
    |               |     |
    |               |     first borrow later used by call
    |               first mutable borrow occurs here
    |
help: try adding a local storing this argument...
   --> src/lib.rs:308:39
    |
308 |     let env = arena.cons(arena.nil(), arena.nil());
    |                                       ^^^^^^^^^^^
help: ...and then using that local as the argument to this call
   --> src/lib.rs:308:15
    |
308 |     let env = arena.cons(arena.nil(), arena.nil());
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0499]: cannot borrow `*arena` as mutable more than once at a time
   --> src/lib.rs:314:16
    |
314 |     arena.cons(arena.nil(), parent)
    |     ----- ---- ^^^^^ second mutable borrow occurs here
    |     |     |
    |     |     first borrow later used by call
    |     first mutable borrow occurs here
    |
help: try adding a local storing this argument...
   --> src/lib.rs:314:16
    |
314 |     arena.cons(arena.nil(), parent)
    |                ^^^^^^^^^^^
help: ...and then using that local as the argument to this call
   --> src/lib.rs:314:5
    |
314 |     arena.cons(arena.nil(), parent)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0499]: cannot borrow `*arena` as mutable more than once at a time
   --> src/lib.rs:842:53
    |
842 |                         let list = arena.cons(expr, arena.nil());
    |                                    ----- ----       ^^^^^ second mutable borrow occurs here
    |                                    |     |
    |                                    |     first borrow later used by call
    |                                    first mutable borrow occurs here
    |
help: try adding a local storing this argument...
   --> src/lib.rs:842:53
    |
842 |                         let list = arena.cons(expr, arena.nil());
    |                                                     ^^^^^^^^^^^
help: ...and then using that local as the argument to this call
   --> src/lib.rs:842:36
    |
842 |                         let list = arena.cons(expr, arena.nil());
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `env`
    --> src/lib.rs:1060:5
     |
1060 |     env: ArenaRef,
     |     ^^^ help: if this is intentional, prefix it with an underscore: `_env`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `n`
    --> src/lib.rs:1119:35
     |
1119 |         if let Some(Value::Number(n)) = arena.get(val) {
     |                                   ^ help: if this is intentional, prefix it with an underscore: `_n`

warning: unused variable: `n`
    --> src/lib.rs:1131:35
     |
1131 |         if let Some(Value::Number(n)) = arena.get(val) {
     |                                   ^ help: if this is intentional, prefix it with an underscore: `_n`

Some errors have detailed explanations: E0499, E0502.
For more information about an error, try `rustc --explain E0499`.
warning: `ruthe` (lib) generated 3 warnings
error: could not compile `ruthe` (lib) due to 6 previous errors; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `ruthe` (lib test) generated 3 warnings (3 duplicates)
error: could not compile `ruthe` (lib test) due to 6 previous errors; 3 warnings emitted
